--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,11 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
+node_modules/
+.sublime-workspace
+.sublime-project
+.log
+
 # =========================
 # Operating System Files
 # =========================
