--- a/app/libs/fontello/config.json
+++ b/app/libs/fontello/config.json
@@ -25,141 +25,111 @@
       "src": "fontawesome"
     },
     {
-      "uid": "4aad6bb50b02c18508aae9cbe14e784e",
-      "css": "share",
-      "code": 59395,
-      "src": "fontawesome"
-    },
-    {
       "uid": "0357f7abbc0babf43509669f332e41e6",
       "css": "mobile",
-      "code": 59396,
+      "code": 59395,
       "src": "fontawesome"
     },
     {
       "uid": "554ee96588a6c9ee632624cd051fe6fc",
       "css": "chart-pie",
-      "code": 59397,
+      "code": 59396,
       "src": "fontawesome"
     },
     {
       "uid": "ea2d9a8c51ca42b38ef0d2a07f16d9a7",
       "css": "chart-line",
-      "code": 59398,
+      "code": 59397,
       "src": "fontawesome"
     },
     {
       "uid": "243424d56528e83e4fe9ef6e6347a2ef",
       "css": "rouble",
-      "code": 59399,
+      "code": 59398,
       "src": "fontawesome"
     },
     {
       "uid": "5f0f183e241d15cbe486bff88b188dff",
       "css": "puzzle",
-      "code": 59400,
+      "code": 59399,
       "src": "fontawesome"
     },
     {
       "uid": "44a0e2660ac966cdfaa04deb6aac51df",
       "css": "shield",
-      "code": 59401,
-      "src": "fontawesome"
-    },
-    {
-      "uid": "aa58e30c7196b1378a6ca78c025cc3b5",
-      "css": "behance-1",
-      "code": 59402,
+      "code": 59400,
       "src": "fontawesome"
     },
     {
       "uid": "f3d95e13eb43f3f6b8efe1eb424a1e3b",
       "css": "vkontakte",
-      "code": 59403,
+      "code": 59401,
       "src": "fontawesome"
-    },
-    {
-      "uid": "a9862b9d5197886c1ad693ecd7120b31",
-      "css": "youtube",
-      "code": 59404,
-      "src": "fontawesome"
-    },
-    {
-      "uid": "815503841e980c848f55e0271deacead",
-      "css": "link",
-      "code": 59405,
-      "src": "entypo"
     },
     {
       "uid": "767fede84586366cd7d6c835be745454",
       "css": "mobile-1",
-      "code": 59406,
+      "code": 59402,
       "src": "entypo"
     },
     {
       "uid": "7184d8171b6a9b18eabbace94cca21db",
       "css": "chart-line-1",
-      "code": 59407,
+      "code": 59403,
       "src": "entypo"
     },
     {
       "uid": "ba9ae3250633c7b1fe249587358c8383",
       "css": "contacts",
-      "code": 59408,
+      "code": 59404,
       "src": "typicons"
     },
     {
       "uid": "afdef1656447e2558662b393d6b4bb75",
       "css": "share-2",
-      "code": 59409,
+      "code": 59405,
       "src": "iconic"
     },
     {
       "uid": "12db1f260b5b2ccd1aa4d8942cc7f6dd",
       "css": "vk",
-      "code": 59410,
+      "code": 59406,
       "src": "zocial"
     },
     {
       "uid": "8aa99bc60f3553bb3e31b73dd6e744c8",
       "css": "rocket",
-      "code": 59411,
-      "src": "fontawesome"
-    },
-    {
-      "uid": "21b42d3c3e6be44c3cc3d73042faa216",
-      "css": "sliders",
-      "code": 59412,
+      "code": 59407,
       "src": "fontawesome"
     },
     {
       "uid": "3e674995cacc2b09692c096ea7eb6165",
       "css": "megaphone",
-      "code": 59413,
-      "src": "fontawesome"
-    },
-    {
-      "uid": "0bda4bc779d4c32623dec2e43bd67ee8",
-      "css": "gauge",
-      "code": 59414,
+      "code": 59408,
       "src": "fontawesome"
     },
     {
       "uid": "58a16628dcbd6456c61218f3d27591be",
       "css": "skype",
-      "code": 59415,
+      "code": 59409,
       "src": "fontawesome"
     },
     {
-      "uid": "3d8cc269fdad8a4cda55a20542a84e5c",
-      "css": "credit-card-1",
-      "code": 59416,
+      "uid": "3d4ea8a78dc34efe891f3a0f3d961274",
+      "css": "info",
+      "code": 59410,
       "src": "fontawesome"
     },
     {
-      "uid": "9c7ff134960bb5a82404e4aeaab366d9",
-      "css": "up-open-1",
-      "code": 59419,
+      "uid": "289b5f92f23acf1059c93fbf401c1ad5",
+      "css": "down-open-big",
+      "code": 59411,
+      "src": "entypo"
+    },
+    {
+      "uid": "0805cca616b3c12714f35af4d0912c10",
+      "css": "up-open-big",
+      "code": 59412,
       "src": "entypo"
     }
   ]
