--- a/package.json
+++ b/package.json
@@ -4,13 +4,17 @@
   "description": "First Gulp Project",
   "devDependencies": {
     "browser-sync": "^2.11.0",
+    "del": "^2.2.0",
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "^3.1.0",
+    "gulp-cache": "^0.4.2",
     "gulp-concat": "^2.6.0",
+    "gulp-imagemin": "^2.4.0",
     "gulp-minify-css": "^1.2.0",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.0.4",
     "gulp-uglifyjs": "^0.6.2",
+    "imagemin-pngquant": "^4.2.2",
     "node-bourbon": "^4.2.3"
   }
 }
